feat(doc) README.md 增加 VM options 說明
Signed-off-by: AidenChen <wei310129@gmail.com>